-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Change streams
-
Query Execution
-
Fully Compatible
-
ALL
-
QE 2025-09-01
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Data race condition
The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
/data/mci/261f65657bd114359a8e3a064d6e450e/bazel_cache/54c751a1c930d7b7fb2afe7fb4a68167/execroot/_main/src/mongo/db/change_stream_options_manager.h:86: MISSING_LOCK 147676 Accessing "this->_changeStreamOptions" without holding lock "mongo::ChangeStreamOptionsManager._mutex". Elsewhere, "mongo::ChangeStreamOptionsManager._changeStreamOptions" is written to with "ChangeStreamOptionsManager._mutex" held 1 out of 1 times.