SERVER-109735 Coverity analysis defect 147676: Data race condition (#40481)

GitOrigin-RevId: a5e7e1d649031cc70b3bc298a6f5335bbee0d6ad